# cbrecommender

./: .gitignore  LICENSE.txt  README.md  cbrecommender.py  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
src/cbrecommender/: __init__.py  cbrecommender.py  helpers.py
