[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbrecommender"
version = "1.0.0"
description = "A library for implementing Content-Based Recommendation Engines with ease!"
readme = "README.md"
authors = [{ name = "Akash S Panickar", email = "akashsabu@ymail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["content-based-recommender", "recommendation-engine"]
dependencies = [
    "pandas",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/mochatek/cbrecommender"