[metadata]
name = cbrecommender
version = 1.0.0
author = Akash S Panickar
author_email = akashsabu@ymail.com
description = A library for implementing Content-Based Recommendation Engines with ease!
long_description = file: README.md
long_description_content_type = text/markdown
keywords = content-based-recommender, recommendation-engine
url = https://github.com/mochatek/cbrecommender
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:

python_requires = >=3.7

[options.packages.find]
where = src